@@ -5,7 +5,7 @@ bfd/
 	* elf-bfd.h (_bfd_elf_merge_symbol): Add a boolean argument to
 	indicate if the old definition is secondary.
 
-	* elf32-sh-symbian.c (_bfd_elf_mark_dynamic_def_weak): Pass FALSE
+	* elf32-sh-symbian.c (sh_symbian_relocate_section): Pass FALSE
 	to _bfd_elf_merge_symbol.
 
 	* elflink.c (_bfd_elf_merge_symbol): Add a boolean argument to
@@ -221,7 +221,7 @@ ld/testsuite/
 	* ld-elf/library8c.rd: Likewise.
 
 diff --git a/bfd/archive.c b/bfd/archive.c
-index 8e8fd2d..de294a7 100644
+index be0f562..c7b41c5 100644
 --- a/bfd/archive.c
 +++ b/bfd/archive.c
 @@ -2335,6 +2335,7 @@ _bfd_compute_and_write_armap (bfd *arch, unsigned int elength)
@@ -233,10 +233,10 @@ index 8e8fd2d..de294a7 100644
  				 | BSF_GNU_UNIQUE)) != 0
  		       || bfd_is_com_section (sec))
 diff --git a/bfd/bfd-in2.h b/bfd/bfd-in2.h
-index e94e3c8..f8afd90 100644
+index 0cb9bb0..3cf391d 100644
 --- a/bfd/bfd-in2.h
 +++ b/bfd/bfd-in2.h
-@@ -5639,6 +5639,10 @@ typedef struct bfd_symbol
+@@ -5714,6 +5714,10 @@ typedef struct bfd_symbol
       with this name and type in use.  BSF_OBJECT must also be set.  */
  #define BSF_GNU_UNIQUE         (1 << 23)
  
@@ -248,10 +248,10 @@ index e94e3c8..f8afd90 100644
  
    /* A pointer to the section to which this symbol is
 diff --git a/bfd/elf-bfd.h b/bfd/elf-bfd.h
-index aa78ecd..f4cbf27 100644
+index faaf632..f8bec53 100644
 --- a/bfd/elf-bfd.h
 +++ b/bfd/elf-bfd.h
-@@ -1975,7 +1975,7 @@ extern bfd_boolean _bfd_elf_maybe_strip_eh_frame_hdr
+@@ -1978,7 +1978,7 @@ extern bfd_boolean _bfd_elf_maybe_strip_eh_frame_hdr
  
  extern bfd_boolean _bfd_elf_merge_symbol
    (bfd *, struct bfd_link_info *, const char *, Elf_Internal_Sym *,
@@ -261,10 +261,10 @@ index aa78ecd..f4cbf27 100644
     bfd_boolean *, bfd_boolean *, bfd_boolean *);
  
 diff --git a/bfd/elf.c b/bfd/elf.c
-index cab1cc7..1300398 100644
+index 9cd3542..5552f24 100644
 --- a/bfd/elf.c
 +++ b/bfd/elf.c
-@@ -3241,7 +3241,10 @@ sym_is_global (bfd *abfd, asymbol *sym)
+@@ -3242,7 +3242,10 @@ sym_is_global (bfd *abfd, asymbol *sym)
    if (bed->elf_backend_sym_is_global)
      return (*bed->elf_backend_sym_is_global) (abfd, sym);
  
@@ -276,7 +276,7 @@ index cab1cc7..1300398 100644
  	  || bfd_is_und_section (bfd_get_section (sym))
  	  || bfd_is_com_section (bfd_get_section (sym)));
  }
-@@ -6848,8 +6851,9 @@ Unable to find equivalent output section for symbol '%s' from section '%s'"),
+@@ -6871,8 +6874,9 @@ Unable to find equivalent output section for symbol '%s' from section '%s'"),
  #endif
  	    sym.st_info = ELF_ST_INFO (STB_GLOBAL, type);
  	}
@@ -287,7 +287,7 @@ index cab1cc7..1300398 100644
  				    ? STB_WEAK
  				    : STB_GLOBAL),
  				   type);
-@@ -6863,6 +6867,8 @@ Unable to find equivalent output section for symbol '%s' from section '%s'"),
+@@ -6886,6 +6890,8 @@ Unable to find equivalent output section for symbol '%s' from section '%s'"),
  	    bind = STB_LOCAL;
  	  else if (flags & BSF_GNU_UNIQUE)
  	    bind = STB_GNU_UNIQUE;
@@ -297,7 +297,7 @@ index cab1cc7..1300398 100644
  	    bind = STB_WEAK;
  	  else if (flags & BSF_GLOBAL)
 diff --git a/bfd/elf32-mips.c b/bfd/elf32-mips.c
-index 61e8b45..ab4ffdc 100644
+index 18eb643..fef3540 100644
 --- a/bfd/elf32-mips.c
 +++ b/bfd/elf32-mips.c
 @@ -2133,7 +2133,10 @@ mips_elf_sym_is_global (bfd *abfd ATTRIBUTE_UNUSED, asymbol *sym)
@@ -313,7 +313,7 @@ index 61e8b45..ab4ffdc 100644
  	    || bfd_is_com_section (bfd_get_section (sym)));
  }
 diff --git a/bfd/elf32-sh-symbian.c b/bfd/elf32-sh-symbian.c
-index 1f03dbc..d601836 100644
+index e6e0a39..83680c7 100644
 --- a/bfd/elf32-sh-symbian.c
 +++ b/bfd/elf32-sh-symbian.c
 @@ -497,7 +497,7 @@ sh_symbian_relocate_section (bfd *                  output_bfd,
@@ -355,32 +355,10 @@ index 30bda73..05b1351 100644
  	      sym->symbol.flags |= BSF_GNU_UNIQUE;
  	      break;
 diff --git a/bfd/elflink.c b/bfd/elflink.c
-index 2fcbac3..05d2543 100644
+index 6985786..a8594ab 100644
 --- a/bfd/elflink.c
 +++ b/bfd/elflink.c
-@@ -900,7 +900,7 @@ elf_merge_st_other (bfd *abfd, struct elf_link_hash_entry *h,
- 
- static void
- _bfd_elf_mark_dynamic_def_weak (struct elf_link_hash_entry *h,
--				asection *sec, int bind)
-+				asection *sec, int weakbind)
- {
-   if (!h->dynamic_def)
-     {
-@@ -913,10 +913,10 @@ _bfd_elf_mark_dynamic_def_weak (struct elf_link_hash_entry *h,
- 	     if it is weak. Otherwise, we clear it.  */
- 	  if (!h->ref_dynamic)
- 	    {
--	      if (bind == STB_WEAK)
-+	      if (weakbind)
- 		h->dynamic_weak = 1;
- 	    }
--	  else if (bind != STB_WEAK)
-+	  else if (!weakbind)
- 	    h->dynamic_weak = 0;
- 	}
-     }
-@@ -932,7 +932,8 @@ _bfd_elf_mark_dynamic_def_weak (struct elf_link_hash_entry *h,
+@@ -905,7 +905,8 @@ elf_merge_st_other (bfd *abfd, struct elf_link_hash_entry *h,
     SIZE_CHANGE_OK if it is OK for the size to change.  By OK to
     change, we mean that we shouldn't warn if the type or size does
     change.  We set POLD_ALIGNMENT if an old common symbol in a dynamic
@@ -390,7 +368,7 @@ index 2fcbac3..05d2543 100644
  
  bfd_boolean
  _bfd_elf_merge_symbol (bfd *abfd,
-@@ -943,6 +944,7 @@ _bfd_elf_merge_symbol (bfd *abfd,
+@@ -916,6 +917,7 @@ _bfd_elf_merge_symbol (bfd *abfd,
  		       bfd_vma *pvalue,
  		       bfd_boolean *pold_weak,
  		       unsigned int *pold_alignment,
@@ -398,7 +376,7 @@ index 2fcbac3..05d2543 100644
  		       struct elf_link_hash_entry **sym_hash,
  		       bfd_boolean *skip,
  		       bfd_boolean *override,
-@@ -956,7 +958,7 @@ _bfd_elf_merge_symbol (bfd *abfd,
+@@ -929,7 +931,7 @@ _bfd_elf_merge_symbol (bfd *abfd,
    int bind;
    bfd *oldbfd;
    bfd_boolean newdyn, olddyn, olddef, newdef, newdyncommon, olddyncommon;
@@ -407,16 +385,32 @@ index 2fcbac3..05d2543 100644
    const struct elf_backend_data *bed;
  
    *skip = FALSE;
-@@ -1040,9 +1042,17 @@ _bfd_elf_merge_symbol (bfd *abfd,
+@@ -980,6 +982,9 @@ _bfd_elf_merge_symbol (bfd *abfd,
+ 
+   newdyn = (abfd->flags & DYNAMIC) != 0;
+ 
++  /* Treat secondary symbols as weak symbols.  */
++  weakbind = bind == STB_WEAK || bind == STB_SECONDARY;
++
+   /* ref_dynamic_nonweak and dynamic_def flags track actual undefined
+      syms and defined syms in dynamic libraries respectively.
+      ref_dynamic on the other hand can be set for a symbol defined in
+@@ -991,7 +996,7 @@ _bfd_elf_merge_symbol (bfd *abfd,
+     {
+       if (bfd_is_und_section (sec))
+ 	{
+-	  if (bind != STB_WEAK)
++	  if (!weakbind)
+ 	    {
+ 	      h->ref_dynamic_nonweak = 1;
+ 	      hi->ref_dynamic_nonweak = 1;
+@@ -1042,9 +1047,14 @@ _bfd_elf_merge_symbol (bfd *abfd,
        break;
      }
  
 +  /* Set OLDSECONADRY if it isn't TRUE.  */
 +  if (!oldsecondary)
 +    oldsecondary = h->root.secondary != 0;
-+
-+  /* Treat secondary symbols as weak symbols.  */
-+  weakbind = bind == STB_WEAK || bind == STB_SECONDARY;
 +
    /* Differentiate strong and weak symbols.  */
 -  newweak = bind == STB_WEAK;
@@ -427,19 +421,7 @@ index 2fcbac3..05d2543 100644
  	     || h->root.type == bfd_link_hash_undefweak);
    if (pold_weak)
      *pold_weak = oldweak;
-@@ -1172,9 +1182,9 @@ _bfd_elf_merge_symbol (bfd *abfd,
-      visibility will make it unavailable to dynamic objects.  */
-   if (newdyn)
-     {
--      _bfd_elf_mark_dynamic_def_weak (h, sec, bind);
-+      _bfd_elf_mark_dynamic_def_weak (h, sec, weakbind);
-       if (h != hi)
--	_bfd_elf_mark_dynamic_def_weak (hi, sec, bind);
-+	_bfd_elf_mark_dynamic_def_weak (hi, sec, weakbind);
-     }
- 
-   /* If the old symbol has non-default visibility, we ignore the new
-@@ -1293,7 +1303,7 @@ _bfd_elf_merge_symbol (bfd *abfd,
+@@ -1278,7 +1288,7 @@ _bfd_elf_merge_symbol (bfd *abfd,
  
    if (newdef && !newdyn && olddyn)
      newweak = FALSE;
@@ -448,7 +430,7 @@ index 2fcbac3..05d2543 100644
      oldweak = FALSE;
  
    /* Allow changes between different types of function symbol.  */
-@@ -1411,10 +1421,14 @@ _bfd_elf_merge_symbol (bfd *abfd,
+@@ -1396,10 +1406,14 @@ _bfd_elf_merge_symbol (bfd *abfd,
       represent variables; this can cause confusion in principle, but
       any such confusion would seem to indicate an erroneous program or
       shared library.  We also permit a common symbol in a regular
@@ -464,7 +446,7 @@ index 2fcbac3..05d2543 100644
        && (olddef
  	  || (h->root.type == bfd_link_hash_common
  	      && (newweak || newfunc))))
-@@ -1453,8 +1467,9 @@ _bfd_elf_merge_symbol (bfd *abfd,
+@@ -1438,8 +1452,9 @@ _bfd_elf_merge_symbol (bfd *abfd,
        *size_change_ok = TRUE;
      }
  
@@ -476,7 +458,7 @@ index 2fcbac3..05d2543 100644
      {
        /* Don't skip new non-IR weak syms.  */
        if (!(oldbfd != NULL
-@@ -1482,18 +1497,20 @@ _bfd_elf_merge_symbol (bfd *abfd,
+@@ -1467,18 +1482,20 @@ _bfd_elf_merge_symbol (bfd *abfd,
       always take precedence over symbols from dynamic objects, even if
       they are defined after the dynamic object in the link.
  
@@ -501,7 +483,7 @@ index 2fcbac3..05d2543 100644
      {
        /* Change the hash table entry to undefined, and let
  	 _bfd_generic_link_add_one_symbol do the right thing with the
-@@ -1596,8 +1613,8 @@ _bfd_elf_merge_symbol (bfd *abfd,
+@@ -1581,8 +1598,8 @@ _bfd_elf_merge_symbol (bfd *abfd,
  
  /* This function is called to create an indirect symbol from the
     default for the symbol with the default version if needed. The
@@ -512,7 +494,7 @@ index 2fcbac3..05d2543 100644
  
  static bfd_boolean
  _bfd_elf_add_default_symbol (bfd *abfd,
-@@ -1607,6 +1624,7 @@ _bfd_elf_add_default_symbol (bfd *abfd,
+@@ -1592,6 +1609,7 @@ _bfd_elf_add_default_symbol (bfd *abfd,
  			     Elf_Internal_Sym *sym,
  			     asection **psec,
  			     bfd_vma *value,
@@ -520,7 +502,7 @@ index 2fcbac3..05d2543 100644
  			     bfd_boolean *dynsym,
  			     bfd_boolean override)
  {
-@@ -1668,8 +1686,8 @@ _bfd_elf_add_default_symbol (bfd *abfd,
+@@ -1653,8 +1671,8 @@ _bfd_elf_add_default_symbol (bfd *abfd,
    size_change_ok = FALSE;
    sec = *psec;
    if (!_bfd_elf_merge_symbol (abfd, info, shortname, sym, &sec, value,
@@ -531,7 +513,7 @@ index 2fcbac3..05d2543 100644
      return FALSE;
  
    if (skip)
-@@ -1777,8 +1795,8 @@ nondefault:
+@@ -1762,8 +1780,8 @@ nondefault:
    size_change_ok = FALSE;
    sec = *psec;
    if (!_bfd_elf_merge_symbol (abfd, info, shortname, sym, &sec, value,
@@ -542,7 +524,7 @@ index 2fcbac3..05d2543 100644
      return FALSE;
  
    if (skip)
-@@ -2920,31 +2938,41 @@ _bfd_elf_tls_setup (bfd *obfd, struct bfd_link_info *info)
+@@ -2905,31 +2923,41 @@ _bfd_elf_tls_setup (bfd *obfd, struct bfd_link_info *info)
    return tls;
  }
  
@@ -597,7 +579,7 @@ index 2fcbac3..05d2543 100644
  
    /* If the symbol is in a target specific section then we
       must rely upon the backend to tell us what it is.  */
-@@ -2963,9 +2991,12 @@ is_global_data_symbol_definition (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -2948,9 +2976,12 @@ is_global_data_symbol_definition (bfd *abfd ATTRIBUTE_UNUSED,
  
  /* Search the symbol table of the archive element of the archive ABFD
     whose archive map contains a mention of SYMDEF, and determine if
@@ -612,7 +594,7 @@ index 2fcbac3..05d2543 100644
  {
    Elf_Internal_Shdr * hdr;
    bfd_size_type symcount;
-@@ -3033,7 +3064,8 @@ elf_link_is_defined_archive_symbol (bfd * abfd, carsym * symdef)
+@@ -3018,7 +3049,8 @@ elf_link_is_defined_archive_symbol (bfd * abfd, carsym * symdef)
  
        if (strcmp (name, symdef->name) == 0)
  	{
@@ -622,7 +604,7 @@ index 2fcbac3..05d2543 100644
  	  break;
  	}
      }
-@@ -3878,6 +3910,7 @@ error_free_dyn:
+@@ -3863,6 +3895,7 @@ error_free_dyn:
        unsigned int old_alignment;
        bfd *old_bfd;
        bfd * undef_bfd = NULL;
@@ -630,7 +612,7 @@ index 2fcbac3..05d2543 100644
  
        override = FALSE;
  
-@@ -3906,6 +3939,10 @@ error_free_dyn:
+@@ -3891,6 +3924,10 @@ error_free_dyn:
  	  flags = BSF_WEAK;
  	  break;
  
@@ -641,7 +623,7 @@ index 2fcbac3..05d2543 100644
  	case STB_GNU_UNIQUE:
  	  flags = BSF_GNU_UNIQUE;
  	  break;
-@@ -4152,7 +4189,7 @@ error_free_dyn:
+@@ -4137,7 +4174,7 @@ error_free_dyn:
  
  	  if (!_bfd_elf_merge_symbol (abfd, info, name, isym, &sec,
  				      &value, &old_weak, &old_alignment,
@@ -650,7 +632,7 @@ index 2fcbac3..05d2543 100644
  				      &type_change_ok, &size_change_ok))
  	    goto error_free_vers;
  
-@@ -4194,7 +4231,12 @@ error_free_dyn:
+@@ -4178,7 +4215,12 @@ error_free_dyn:
  	      && vernum > 1
  	      && definition)
  	    h->verinfo.verdef = &elf_tdata (abfd)->verdef[vernum - 1];
@@ -663,7 +645,7 @@ index 2fcbac3..05d2543 100644
  
        if (! (_bfd_generic_link_add_one_symbol
  	     (info, abfd, name, flags, sec, value, NULL, FALSE, bed->collect,
-@@ -4384,10 +4426,14 @@ error_free_dyn:
+@@ -4368,10 +4410,14 @@ error_free_dyn:
  	      if (! definition)
  		{
  		  h->ref_regular = 1;
@@ -680,10 +662,10 @@ index 2fcbac3..05d2543 100644
  		{
  		  h->def_regular = 1;
  		  if (h->def_dynamic)
-@@ -4423,6 +4469,13 @@ error_free_dyn:
- 		  h->dynamic_def = 1;
+@@ -4400,6 +4446,13 @@ error_free_dyn:
+ 		{
+ 		  h->def_dynamic = 1;
  		  hi->def_dynamic = 1;
- 		  hi->dynamic_def = 1;
 +		  /* Dynamic definition overrides regular old secondary
 +		     definition.  */
 +		  if (oldsecondary)
@@ -694,7 +676,7 @@ index 2fcbac3..05d2543 100644
  		}
  
  	      /* If the indirect symbol has been forced local, don't
-@@ -4451,8 +4504,8 @@ error_free_dyn:
+@@ -4428,8 +4481,8 @@ error_free_dyn:
  	     the default name.  */
  	  if (definition || h->root.type == bfd_link_hash_common)
  	    if (!_bfd_elf_add_default_symbol (abfd, info, h, name, isym,
@@ -705,7 +687,7 @@ index 2fcbac3..05d2543 100644
  	      goto error_free_vers;
  
  	  if (definition && !dynamic)
-@@ -5127,15 +5180,26 @@ elf_link_add_archive_symbols (bfd *abfd, struct bfd_link_info *info)
+@@ -5107,15 +5160,26 @@ elf_link_add_archive_symbols (bfd *abfd, struct bfd_link_info *info)
  		 map alone.  Instead we must read in the element's symbol
  		 table and check that to see what kind of symbol definition
  		 this is.  */
@@ -734,7 +716,7 @@ index 2fcbac3..05d2543 100644
  
  	  /* We need to include this archive member.  */
  	  element = _bfd_get_elt_at_filepos (abfd, symdef->file_offset);
-@@ -8877,7 +8941,21 @@ elf_link_output_extsym (struct bfd_hash_entry *bh, void *data)
+@@ -8875,7 +8939,21 @@ elf_link_output_extsym (struct bfd_hash_entry *bh, void *data)
      sym.st_info = ELF_ST_INFO (STB_GNU_UNIQUE, h->type);
    else if (h->root.type == bfd_link_hash_undefweak
  	   || h->root.type == bfd_link_hash_defweak)
@@ -757,7 +739,7 @@ index 2fcbac3..05d2543 100644
    else
      sym.st_info = ELF_ST_INFO (STB_GLOBAL, h->type);
    sym.st_target_internal = h->target_internal;
-@@ -9008,7 +9086,8 @@ elf_link_output_extsym (struct bfd_hash_entry *bh, void *data)
+@@ -9006,7 +9084,8 @@ elf_link_output_extsym (struct bfd_hash_entry *bh, void *data)
    if (sym.st_shndx == SHN_UNDEF
        && h->ref_regular
        && (ELF_ST_BIND (sym.st_info) == STB_GLOBAL
@@ -767,7 +749,7 @@ index 2fcbac3..05d2543 100644
      {
        int bindtype;
        unsigned int type = ELF_ST_TYPE (sym.st_info);
-@@ -9034,10 +9113,12 @@ elf_link_output_extsym (struct bfd_hash_entry *bh, void *data)
+@@ -9032,10 +9111,12 @@ elf_link_output_extsym (struct bfd_hash_entry *bh, void *data)
      sym.st_size = 0;
  
    /* If a non-weak symbol with non-default visibility is not defined
@@ -782,7 +764,7 @@ index 2fcbac3..05d2543 100644
        && !h->def_regular)
      {
 diff --git a/bfd/elfn32-mips.c b/bfd/elfn32-mips.c
-index 81d4cf1..fb44ef7 100644
+index 08c8e5f..55de797 100644
 --- a/bfd/elfn32-mips.c
 +++ b/bfd/elfn32-mips.c
 @@ -3153,7 +3153,10 @@ mips_elf_sym_is_global (bfd *abfd ATTRIBUTE_UNUSED, asymbol *sym)
@@ -798,7 +780,7 @@ index 81d4cf1..fb44ef7 100644
  	    || bfd_is_com_section (bfd_get_section (sym)));
  }
 diff --git a/bfd/linker.c b/bfd/linker.c
-index d3ef9a4..753a332 100644
+index 190520a..d6a996b 100644
 --- a/bfd/linker.c
 +++ b/bfd/linker.c
 @@ -1577,6 +1577,7 @@ _bfd_generic_link_add_one_symbol (struct bfd_link_info *info,
@@ -875,7 +857,7 @@ index d3ef9a4..753a332 100644
  	       identify all functions that might be global
  	       constructors and destructors and pass them up in a
 diff --git a/bfd/syms.c b/bfd/syms.c
-index bf5a488..69ced86 100644
+index 98d596e..3132d95 100644
 --- a/bfd/syms.c
 +++ b/bfd/syms.c
 @@ -308,6 +308,10 @@ CODE_FRAGMENT
@@ -926,10 +908,10 @@ index ad38e27..31e1508 100644
  		|| bfd_is_und_section (sym->section)
  		|| bfd_is_com_section (sym->section));
 diff --git a/binutils/readelf.c b/binutils/readelf.c
-index 63ab14b..3372062 100644
+index 1d43a64..a2336a1 100644
 --- a/binutils/readelf.c
 +++ b/binutils/readelf.c
-@@ -8808,6 +8808,7 @@ get_symbol_binding (unsigned int binding)
+@@ -8929,6 +8929,7 @@ get_symbol_binding (unsigned int binding)
      case STB_LOCAL:	return "LOCAL";
      case STB_GLOBAL:	return "GLOBAL";
      case STB_WEAK:	return "WEAK";
@@ -938,7 +920,7 @@ index 63ab14b..3372062 100644
        if (binding >= STB_LOPROC && binding <= STB_HIPROC)
  	snprintf (buff, sizeof (buff), _("<processor specific>: %d"),
 diff --git a/gas/config/obj-elf.c b/gas/config/obj-elf.c
-index d7c7665..c615b36 100644
+index 6450328..12386db 100644
 --- a/gas/config/obj-elf.c
 +++ b/gas/config/obj-elf.c
 @@ -66,6 +66,7 @@ static void obj_elf_line (int);
@@ -949,7 +931,7 @@ index d7c7665..c615b36 100644
  static void obj_elf_weak (int);
  static void obj_elf_local (int);
  static void obj_elf_visibility (int);
-@@ -94,6 +95,7 @@ static const pseudo_typeS elf_pseudo_table[] =
+@@ -95,6 +96,7 @@ static const pseudo_typeS elf_pseudo_table[] =
    {"type", obj_elf_type, 0},
    {"version", obj_elf_version, 0},
    {"weak", obj_elf_weak, 0},
@@ -957,7 +939,7 @@ index d7c7665..c615b36 100644
  
    /* These define symbol visibility.  */
    {"internal", obj_elf_visibility, STV_INTERNAL},
-@@ -437,6 +439,29 @@ obj_elf_local (int ignore ATTRIBUTE_UNUSED)
+@@ -441,6 +443,29 @@ obj_elf_local (int ignore ATTRIBUTE_UNUSED)
  }
  
  static void
@@ -987,7 +969,7 @@ index d7c7665..c615b36 100644
  obj_elf_weak (int ignore ATTRIBUTE_UNUSED)
  {
    int c;
-@@ -446,7 +471,8 @@ obj_elf_weak (int ignore ATTRIBUTE_UNUSED)
+@@ -450,7 +475,8 @@ obj_elf_weak (int ignore ATTRIBUTE_UNUSED)
      {
        symbolP = get_sym_from_input_line_and_check ();
        c = *input_line_pointer;
@@ -997,7 +979,7 @@ index d7c7665..c615b36 100644
        if (c == ',')
  	{
  	  input_line_pointer++;
-@@ -1988,18 +2014,24 @@ elf_frob_symbol (symbolS *symp, int *puntp)
+@@ -2132,18 +2158,24 @@ elf_frob_symbol (symbolS *symp, int *puntp)
  	      if (S_IS_WEAK (symp))
  		S_SET_WEAK (symp2);
  
@@ -1025,7 +1007,7 @@ index d7c7665..c615b36 100644
      }
  
  #ifdef TC_MIPS
-@@ -2214,7 +2246,7 @@ elf_frob_file_before_adjust (void)
+@@ -2358,7 +2390,7 @@ elf_frob_file_before_adjust (void)
  	    /* If there was .weak foo, but foo was neither defined nor
  	       used anywhere, remove it.  */
  
@@ -1035,10 +1017,10 @@ index d7c7665..c615b36 100644
  		     && symbol_used_in_reloc_p (symp) == 0)
  	      symbol_remove (symp, &symbol_rootP, &symbol_lastP);
 diff --git a/gas/doc/as.texinfo b/gas/doc/as.texinfo
-index 67233f0..70dc11e 100644
+index c976c05..7e9c333 100644
 --- a/gas/doc/as.texinfo
 +++ b/gas/doc/as.texinfo
-@@ -4095,6 +4095,7 @@ Some machine configurations provide additional directives.
+@@ -4127,6 +4127,7 @@ Some machine configurations provide additional directives.
  * Print::			@code{.print @var{string}}
  @ifset ELF
  * Protected::                   @code{.protected @var{names}}
@@ -1046,7 +1028,7 @@ index 67233f0..70dc11e 100644
  @end ifset
  
  * Psize::                       @code{.psize @var{lines}, @var{columns}}
-@@ -5777,6 +5778,14 @@ their binding: local, global or weak).  The directive sets the visibility to
+@@ -5809,6 +5810,14 @@ their binding: local, global or weak).  The directive sets the visibility to
  components that defines them must be resolved to the definition in that
  component, even if a definition in another component would normally preempt
  this.
@@ -1062,7 +1044,7 @@ index 67233f0..70dc11e 100644
  
  @node Psize
 diff --git a/gas/symbols.c b/gas/symbols.c
-index 1f325c4..79ea5bc 100644
+index 05ae6a7..56dbfc0 100644
 --- a/gas/symbols.c
 +++ b/gas/symbols.c
 @@ -2035,6 +2035,14 @@ S_IS_WEAK (symbolS *s)
@@ -1227,10 +1209,10 @@ index 0000000..37bd0ce
 +	.comm foobar,30
 +	.secondary foobar
 diff --git a/gas/testsuite/gas/elf/elf.exp b/gas/testsuite/gas/elf/elf.exp
-index 7897788..04a1e10 100644
+index 9ffd257..d3e929d 100644
 --- a/gas/testsuite/gas/elf/elf.exp
 +++ b/gas/testsuite/gas/elf/elf.exp
-@@ -188,6 +188,11 @@ if { [is_elf_format] } then {
+@@ -205,6 +205,11 @@ if { [is_elf_format] } then {
      
      run_dump_test "common1"
      run_dump_test "common2"
@@ -1377,10 +1359,10 @@ index bf44dee..d4063b8 100644
       cause map file generation to use an O(N^2) algorithm and disable
       caching ELF symbol buffer.  */
 diff --git a/include/elf/common.h b/include/elf/common.h
-index 244e27f..04d1080 100644
+index 2bae603..e8c502c 100644
 --- a/include/elf/common.h
 +++ b/include/elf/common.h
-@@ -655,6 +655,7 @@
+@@ -663,6 +663,7 @@
  #define STB_LOCAL	0		/* Symbol not visible outside obj */
  #define STB_GLOBAL	1		/* Symbol visible outside obj */
  #define STB_WEAK	2		/* Like globals, lower precedence */
@@ -1389,10 +1371,10 @@ index 244e27f..04d1080 100644
  #define STB_GNU_UNIQUE	10		/* Symbol is unique in namespace */
  #define STB_HIOS	12		/* OS-specific semantics */
 diff --git a/ld/emultempl/elf32.em b/ld/emultempl/elf32.em
-index 9e263a9..a087ff4 100644
+index 53d4e24..41df255 100644
 --- a/ld/emultempl/elf32.em
 +++ b/ld/emultempl/elf32.em
-@@ -2345,6 +2345,8 @@ fragment <<EOF
+@@ -2351,6 +2351,8 @@ fragment <<EOF
  	link_info.error_textrel = FALSE;
        else if (strcmp (optarg, "textoff") == 0)
  	link_info.error_textrel = FALSE;
@@ -1401,7 +1383,7 @@ index 9e263a9..a087ff4 100644
  EOF
  fi
  
-@@ -2469,6 +2471,8 @@ fragment <<EOF
+@@ -2478,6 +2480,8 @@ fragment <<EOF
    -z relro                    Create RELRO program header\n"));
    fprintf (file, _("\
    -z stacksize=SIZE           Set size of stack segment\n"));
@@ -1411,10 +1393,10 @@ index 9e263a9..a087ff4 100644
  fi
  
 diff --git a/ld/ld.texinfo b/ld/ld.texinfo
-index 4a8118f..a09b403 100644
+index 2429668..9dc9567 100644
 --- a/ld/ld.texinfo
 +++ b/ld/ld.texinfo
-@@ -1087,6 +1087,10 @@ Marks the object may contain $ORIGIN.
+@@ -1094,6 +1094,10 @@ Marks the object may contain $ORIGIN.
  @item relro
  Create an ELF @code{PT_GNU_RELRO} segment header in the object.
  
@@ -1426,10 +1408,10 @@ index 4a8118f..a09b403 100644
  Set the emulation maximum page size to @var{value}.
  
 diff --git a/ld/ldmain.c b/ld/ldmain.c
-index 3ba19b9..bbdbaf9 100644
+index c23c554..3d9e34f 100644
 --- a/ld/ldmain.c
 +++ b/ld/ldmain.c
-@@ -278,6 +278,7 @@ main (int argc, char **argv)
+@@ -281,6 +281,7 @@ main (int argc, char **argv)
    link_info.combreloc = TRUE;
    link_info.strip_discarded = TRUE;
    link_info.emit_hash = TRUE;
